# ec2-safe-ops

./: .gitignore  README.md  pyproject.toml
excel/: ec2_safe_ops.xlsm
excel/vba/: ec2_safe_ops.bas
infra/terraform_sandbox/: ec2.tf  vpc.tf
src/common/: aws_handler.py  constants.py  csv_handler.py  logger_config.py  models.py  reporter.py
src/ec2_app/: ec2_delete.py  ec2_report.py  ec2_start.py  ec2_stop.py
